# ot-harjoitustyo

./: .coverage  .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: .coverage  .coveragerc  pyproject.toml  tasks.py
laskarit/viikko2/maksukortti/htmlcov/: index.html  src_maksukortti_py.html  status.json
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: database.py  db.py  gui.py  logic.py  start.py  text_ui.py  tui.py
src/db/: db.py
src/entities/: budget_item.py  user.py
src/logic/: logic.py
src/tests/: application_test.py  tests.py
src/ui/: tui.py
