[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["henkkaha <henrik.harjula@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
invoke = "^1.5.0"

[tool.poetry.dev-dependencies]
pylint = "^2.7.4"
autopep8 = "^1.5.6"
coverage = "^5.5"
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
